# VideoConverter

./: .clineignore  .clinerules  .pre-commit-config.yaml  Makefile  README.md  cli.py  debug.html  debug.py  genindex.html  gui.py  modules.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  tkinter_test.py  video_converter.compressor.html  video_converter.conveter.html  video_converter.extractor.html  video_converter.gui.html  video_converter.html  video_converter.progress.html  video_converter.utils.html
.doctrees/: debug.doctree  environment.pickle  modules.doctree  readme.doctree  video_converter.compressor.doctree  video_converter.conveter.doctree  video_converter.doctree  video_converter.extractor.doctree  video_converter.gui.doctree  video_converter.progress.doctree  video_converter.utils.doctree
.doctrees/api/: video_converter.gui.doctree  video_converter.progress.doctree
_modules/: debug.html  index.html
_modules/video_converter/: compressor.html  conveter.html  extractor.html  gui.html  progress.html  utils.html
_sources/api/: video_converter.extractor.rst.txt  video_converter.progress.rst.txt  video_converter.utils.rst.txt
api/: modules.html  video_converter.gui.html
docs/sphinx/: .gitignore
docs/sphinx/source/: conf.py  debug.html  index.rst  modules.html  modules.rst  video_converter.html  (+1 more)
doctrees/: environment.pickle  index.doctree
doctrees/api/: video_converter.conveter.doctree
html/: .buildinfo  index.html  py-modindex.html  readme.html  searchindex.js
html/.doctrees/: environment.pickle
html/_sources/: readme.rst.txt
html/api/: video_converter.compressor.html  video_converter.conveter.html  video_converter.extractor.html  video_converter.html  video_converter.progress.html  video_converter.utils.html
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: compressor.py  conveter.py  debug.py  extractor.py  progress.py
src/video_converter/: __main__.py  compressor.py  conveter.py  extractor.py  gui.py  progress.py  utils.py
tests/: run_tests.py  test_cli_commands.py  test_gui.py
video_converter/: __init__.py  __main__.py  cli.py  gui.py
video_converter/src/: compressor.py  conveter.py  extractor.py  progress.py  utils.py
(+19 files in other folders)
